--- a/index.html
+++ b/index.html
@@ -122,6 +122,26 @@
         </section>       
         <!-- ================= End About Area ======================-->
 
+        <!-- ================= Start Brands Area ===================-->
+        <section class="brands-section ">
+            <div class="container ">
+                <div class="row ">
+                    <div class="col-lg-12 col-md-12 ">
+                        <div class="brands-section slider ">
+                        <img src="./img/logo1.png " alt="brand1 ">
+                        <img src="./img/logo2.png " alt="brand2 ">
+                        <img src="./img/logo3.png " alt="brand3 ">
+                        <img src="./img/logo4.png " alt="brand4 ">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- ================= End Brands Area =====================-->
+
+
+
     </main>
     <!-- ================= End Main Area ========================-->
 
