--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="col-lg-6 col-md-12">
                         <h4>Hey</h4>
                         <h2 class="title-text text-uppercase">I am <span>Nataly</span></h2>
-                        <h5 class="title-text text-uppercase">Designer and Web Developer</h5>
+                        <h5 class="title-text text-uppercase">Designer and <br>Web Developer</h5>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex-wrap">
                                 <button type="button" class="btn button primary-button mr-4 text-uppercase">Hire Me</button>
@@ -140,7 +140,74 @@
 
         <!-- ================= End Brands Area =====================-->
 
+        <!-- ================= Start Services Area =====================-->
+        <section class="services-section ">
+                <div class="container ">
+                    <div class="row ">
+                        <div class="col-lg-12 text-center ">
+                            <h3 class="title-text text-uppercase ">Services</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime corrupti, 
+                                impedit sit culpa asperiores soluta provident doloribus repellendus nemo recusandae.
+                            </p>
+                        </div>
+                    </div>
+                    
+                <div class="container services-list ">
+                    <div class="row ">
+                        <div class="col-lg-3 col-md-6 col-sm-12 ">
+                            <div class="card ">
+                                <div class="service-img text-center py-4 ">
+                                    <img src="./img/s1.png " alt="service ">
+                                </div>
+                                <div class="card-body text-center ">
+                                    <h5 class="card-title text-uppercase title-text ">UI/UX Desing</h5>
+                                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <a href="# " class="btn button primary-button text-uppercase ">Learn more</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 ">
+                            <div class="card ">
+                                <div class="service-img text-center py-4 ">
+                                    <img src="./img/s2.png " alt="service ">
+                                </div>
+                                <div class="card-body text-center ">
+                                    <h5 class="card-title text-uppercase title-text ">Development</h5>
+                                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <a href="# " class="btn button primary-button text-uppercase ">Learn more</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 ">
+                            <div class="card ">
+                                <div class="service-img text-center py-4 ">
+                                    <img src="./img/s3.png " alt="service ">
+                                </div>
+                                <div class="card-body text-center ">
+                                    <h5 class="card-title text-uppercase title-text ">Optimization</h5>
+                                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <a href="# " class="btn button primary-button text-uppercase ">Learn more</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-3 col-md-6 col-sm-12 ">
+                            <div class="card ">
+                                <div class="service-img text-center py-4 ">
+                                    <img src="./img/s4.png " alt="service ">
+                                </div>
+                                <div class="card-body text-center ">
+                                    <h5 class="card-title text-uppercase title-text ">SEO & SMM</h5>
+                                    <p class="card-text ">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                    <a href="# " class="btn button primary-button text-uppercase ">Learn more</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
 
+        <!-- ================= End Services Area ==================-->
 
     </main>
     <!-- ================= End Main Area ========================-->
