feature: smaller section paddings

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div class="col-lg-6 col-md-12">
                         <h4>Hey</h4>
                         <h2 class="title-text text-uppercase">I am <span>Nataly</span></h2>
-                        <h5 class="title-text text-uppercase">Designer and <br>Web Developer</h5>
+                        <h5 class="title-text text-uppercase">Designer and Web Developer</h5>
                         <div class="site-buttons">
                             <div class="d-flex flex-row flex-wrap">
                                 <button type="button" class="btn button primary-button mr-4 text-uppercase">Hire Me</button>
